# raclette

./: .gitignore  pyproject.toml
raclette/: .__init__.py.swp  .bibtex.py.swp  __init__.py  bibtex.py  cff_to_bibtex.py  crossref.py  hardcoded.py  main.py  python_analysis.py  scl_functions.py
raclette/queries/: github.py  pypi.py
raclette/tests/: Joss_all_published_github.txt  joss.py  repos.txt  ston.toml  test.py
raclette/utils/: cli.py  open_files.py  read_online_file.py
